<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="lucentum.com.EditarPerfil"
    android:background="#64B5F6">


    <Button
        android:layout_width="200dp"
        android:layout_height="150dp"
        android:id="@+id/btn_FotoPerfil"
        android:layout_below="@+id/lbl_EditarPerfil"
        android:layout_centerHorizontal="true"

        android:background="#64B5F6" />

    <TextView
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:text="@string/editar_perfil"
        android:id="@+id/lbl_EditarPerfil"
        android:layout_alignParentTop="true"
        android:minLines="1"
        android:textSize="30dp"
        android:textStyle="normal"
        android:textColor="#FFFFFF"
        android:singleLine="false"
        android:textAlignment="center"
        android:layout_marginTop="20dp"
        android:layout_alignParentRight="false"
        android:gravity="center|center_horizontal"
        android:layout_centerHorizontal="true" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:text="@string/editar_perfil_nombre_usuario"
        android:id="@+id/lbl_NombreUsuario"
        android:layout_below="@+id/btn_FotoPerfil"
        android:layout_centerHorizontal="true" />



    <Button
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:id="@+id/btn_save"
        android:background="@drawable/save"
        android:onClick="ModificaPerfill"
        android:layout_alignParentTop="true"
        android:layout_alignParentRight="true" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/img_foto"
        android:layout_below="@+id/lbl_EditarPerfil"
        android:layout_alignLeft="@+id/btn_FotoPerfil"
        android:layout_alignStart="@+id/btn_FotoPerfil"
        android:layout_above="@+id/lbl_NombreUsuario"
        android:layout_alignRight="@+id/btn_FotoPerfil"
        android:layout_alignEnd="@+id/btn_FotoPerfil"
        android:scrollbarAlwaysDrawHorizontalTrack="false"
        android:adjustViewBounds="false"
        style="@style/Base.Widget.AppCompat.Toolbar"
        android:layout_centerHorizontal="true" />

    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="500dp"
        android:gravity="center"
        android:layout_below="@+id/lbl_NombreUsuario"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true">
        <RelativeLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="500dp"
            android:id="@+id/ll_scroll"
            android:gravity="left">
            <EditText
                android:layout_width="250dp"
                android:layout_height="45dp"
                android:inputType="textPersonName"
                android:hint="@string/editar_perfil_nombre"
                android:ems="10"
                android:id="@+id/tbx_Nombre"
                android:typeface="normal"
                android:fontFamily="sans-serif-light"
                android:background="@drawable/myedittext"
                android:layout_alignParentTop="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_marginTop="20dp" />
            <EditText
                android:layout_width="wrap_content"
                android:layout_height="45dp"
                android:inputType="number"
                android:ems="10"
                android:id="@+id/tbx_Edad"
                android:textStyle="normal"
                android:autoText="false"
                android:hint="@string/editar_perfil_edad"
                android:fontFamily="sans-serif-light"
                android:background="@drawable/myedittext"
                android:layout_marginTop="10dp"
                android:layout_below="@+id/tbx_Nombre"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_toLeftOf="@+id/radioGroup"
                android:layout_toStartOf="@+id/radioGroup" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceSmall"
                android:text="@string/editar_perfil_sexo"
                android:id="@+id/lbl_sexo"
                android:textSize="25dp"
                android:textColor="#000000"
                android:layout_below="@+id/tbx_Edad"
                android:layout_marginTop="10dp" />
            <EditText
                android:layout_width="wrap_content"
                android:layout_height="45dp"
                android:inputType="numberDecimal"
                android:ems="10"
                android:id="@+id/tbx_peso"
                android:hint="@string/editar_perfil_peso"
                android:layout_marginTop="10dp"
                android:fontFamily="sans-serif-light"
                android:background="@drawable/myedittext"
                android:layout_below="@+id/tbx_altura"

                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_alignRight="@+id/tbx_altura"
                android:layout_alignEnd="@+id/tbx_altura" />
            <EditText
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:id="@+id/tbx_cuidad"
                android:hint="@string/editar_perfil_cuidad"
                android:fontFamily="sans-serif-light"
                android:background="@drawable/myedittext"
                android:layout_marginTop="10dp"
                android:layout_below="@+id/tbx_peso"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_alignRight="@+id/tbx_correo"
                android:layout_marginRight="60dp" />
            <EditText
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:id="@+id/tbx_pais"
                android:hint="@string/editar_perfil_Pais"
                android:layout_marginTop="10dp"
                android:fontFamily="sans-serif-light"
                android:background="@drawable/myedittext"
                android:layout_below="@+id/tbx_cuidad"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_alignRight="@+id/tbx_cuidad"
                android:layout_alignEnd="@+id/tbx_cuidad" />
            <EditText
                android:layout_width="wrap_content"
                android:layout_height="45dp"
                android:inputType="textEmailAddress"
                android:ems="10"
                android:id="@+id/tbx_correo"
                android:hint="@string/editar_perfil_correo"
                android:fontFamily="sans-serif-light"
                android:layout_below="@+id/tbx_pais"
                android:background="@drawable/myedittext"
                android:layout_marginTop="10dp"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true" />
            <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onRadioButtonClicked"
                android:id="@+id/radioGroup"
                android:weightSum="1"
                android:layout_below="@+id/tbx_Edad"
                android:layout_toRightOf="@+id/lbl_sexo"
                android:orientation="horizontal"
                android:layout_alignTop="@+id/tbx_Edad"
                android:layout_marginTop="50dp"
                android:layout_marginRight="0dp"
                android:layout_marginLeft="10dp">

                <RadioButton
                    android:layout_width="100dp"
                    android:layout_height="40dp"
                    android:text="@string/editar_perfil_mujer"
                    android:id="@+id/rbtn_mujer"
                    android:checked="false"
                    android:layout_below="@+id/radioGroup"
                    android:layout_alignRight="@+id/tbx_altura"
                    android:layout_alignEnd="@+id/tbx_altura"
                    android:textSize="25dp" />

                <RadioButton
                    android:layout_width="150dp"
                    android:layout_height="40dp"
                    android:text="@string/editar_perfil_hombre"
                    android:id="@+id/rbtn_hombre"
                    android:checked="false"
                    android:layout_below="@+id/radioGroup"
                    android:layout_toRightOf="@+id/tbx_cuidad"
                    android:layout_toEndOf="@+id/tbx_cuidad"
                    android:textSize="25dp" />

            </RadioGroup>

            <EditText
                android:layout_width="wrap_content"
                android:layout_height="45dp"
                android:inputType="numberDecimal"
                android:ems="10"
                android:id="@+id/tbx_altura"
                android:hint="@string/editar_perfil_altura"
                android:fontFamily="sans-serif-light"
                android:background="@drawable/myedittext"
                android:layout_below="@+id/lbl_sexo"
                android:layout_marginTop="15dp"
                android:layout_toLeftOf="@+id/radioGroup"
                android:layout_toStartOf="@+id/radioGroup" />

        </RelativeLayout>
    </ScrollView>
</RelativeLayout>
